# backend/docs/openapi.yaml
@@ -30,6 +30,11 @@ paths:
       responses:
         "200":
           description: "User registered"
+          headers:
+            Authorization:
+              schema:
+                type: string
+                example: Bearer xxxx.yyyy.zzzz
           content:
             application/json:
               schema:
@@ -79,6 +84,11 @@ paths:
       responses:
         "200":
           description: "User logged in"
+          headers:
+            Authorization:
+              schema:
+                type: string
+                example: Bearer xxxx.yyyy.zzzz
           content:
             application/json:
               schema:
@@ -118,6 +128,8 @@ paths:
       tags:
         - "user"
       summary: "Logout user"
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: "User logged out"
@@ -160,6 +172,8 @@ paths:
       tags:
         - "user"
       summary: "Edit user"
+      security:
+        - bearerAuth: []
       requestBody:
         description: "User information to edit"
         required: true
@@ -184,7 +198,7 @@ paths:
                     type: "string"
                     enum: ["success"]
                   data:
-                    $ref: "#/components/schemas/UserInfo"
+                    $ref: "#/components/schemas/UserView"
         "400":
           description: "Invalid input"
           content:
@@ -226,6 +240,8 @@ paths:
       tags:
         - "user"
       summary: "Get user info"
+      security:
+        - bearerAuth: []
       parameters:
         - name: "login"
           in: "path"
@@ -337,6 +353,8 @@ paths:
       tags:
         - "media"
       summary: "Add media"
+      security:
+        - bearerAuth: []
       requestBody:
         description: "Media information"
         required: true
@@ -353,12 +371,11 @@ paths:
                   type: "string"
                 category:
                   type: "string"
-                releaseYear:
+                release_year:
                   type: "integer"
                   format: "int64"
                 duration:
-                  type: "string"
-                  format: "date-time"
+                  type: "integer"
                 genres:
                   type: "array"
                   items:
@@ -405,6 +422,8 @@ paths:
       tags:
         - "media"
       summary: "Edit media"
+      security:
+        - bearerAuth: []
       requestBody:
         description: "Media information to edit"
         required: true
@@ -424,12 +443,11 @@ paths:
                   type: "string"
                 category:
                   type: "string"
-                releaseYear:
+                release_year:
                   type: "integer"
                   format: "int64"
                 duration:
-                  type: "string"
-                  format: "date-time"
+                  type: "integer"
                 genres:
                   type: "array"
                   items:
@@ -488,6 +506,8 @@ paths:
       tags:
         - "media"
       summary: "Delete media"
+      security:
+        - bearerAuth: []
       parameters:
         - name: "id"
           in: "path"
@@ -589,6 +609,8 @@ paths:
       tags:
         - "comment"
       summary: "Add comment"
+      security:
+        - bearerAuth: []
       requestBody:
         description: "Comment information"
         required: true
@@ -597,7 +619,7 @@ paths:
             schema:
               type: "object"
               properties:
-                mediaID:
+                media_id:
                   type: "integer"
                   format: "int64"
                 content:
@@ -644,6 +666,8 @@ paths:
       tags:
         - "comment"
       summary: "Edit comment"
+      security:
+        - bearerAuth: []
       requestBody:
         description: "Comment information to edit"
         required: true
@@ -711,6 +735,8 @@ paths:
       tags:
         - "comment"
       summary: "Delete comment"
+      security:
+        - bearerAuth: []
       parameters:
         - name: "id"
           in: "path"
@@ -773,6 +799,8 @@ paths:
       tags:
         - "track"
       summary: "Add track"
+      security:
+        - bearerAuth: []
       requestBody:
         description: "Track information"
         required: true
@@ -781,12 +809,12 @@ paths:
             schema:
               type: "object"
               properties:
-                mediaID:
+                media_id:
                   type: "integer"
                   format: "int64"
                 rating:
                   type: "integer"
-                trackStatus:
+                track_status:
                   type: "string"
       responses:
         "200":
@@ -830,6 +858,8 @@ paths:
       tags:
         - "track"
       summary: "Edit track"
+      security:
+        - bearerAuth: []
       requestBody:
         description: "Track information to edit"
         required: true
@@ -838,12 +868,12 @@ paths:
             schema:
               type: "object"
               properties:
-                mediaID:
+                media_id:
                   type: "integer"
                   format: "int64"
                 rating:
                   type: "integer"
-                trackStatus:
+                track_status:
                   type: "string"
       responses:
         "200":
@@ -899,6 +929,8 @@ paths:
       tags:
         - "track"
       summary: "Delete track"
+      security:
+        - bearerAuth: []
       parameters:
         - name: "id"
           in: "path"
@@ -988,10 +1020,10 @@ components:
           type: "string"
         avatar:
           type: "string"
-        createdAt:
+        created_at:
           type: "string"
           format: "date-time"
-        lastLoginAt:
+        last_login_at:
           type: "string"
           format: "date-time"
     UserInfo:
@@ -1006,10 +1038,10 @@ components:
           type: "string"
         avatar:
           type: "string"
-        createdAt:
+        created_at:
           type: "string"
           format: "date-time"
-        lastLoginAt:
+        last_login_at:
           type: "string"
           format: "date-time"
         tracks:
@@ -1030,17 +1062,16 @@ components:
           type: "string"
         category:
           type: "string"
-        cumulativeRating:
+        cumulative_rating:
           type: "integer"
-        numberOfRatings:
+        number_of_ratings:
           type: "integer"
-        numberOfTracks:
+        number_of_tracks:
           type: "integer"
-        releaseYear:
+        release_year:
           type: "integer"
         duration:
-          type: "string"
-          format: "date-time"
+          type: "integer"
         genres:
           type: "array"
           items:
@@ -1067,18 +1098,18 @@ components:
         id:
           type: "integer"
           format: "int64"
-        mediaID:
+        media_id:
           type: "integer"
           format: "int64"
-        senderID:
+        sender_id:
           type: "integer"
           format: "int64"
         content:
           type: "string"
-        createdAt:
+        created_at:
           type: "string"
           format: "date-time"
-        updatedAt:
+        updated_at:
           type: "string"
           format: "date-time"
         sender:
@@ -1086,17 +1117,17 @@ components:
     MediaTrack:
       type: "object"
       properties:
-        userID:
+        user_id:
           type: "integer"
           format: "int64"
-        mediaID:
+        media_id:
           type: "integer"
           format: "int64"
         rating:
           type: "integer"
-        trackStatus:
+        track_status:
           type: "string"
-        mediaTitle:
+        media_title:
           type: "string"
     Filter:
       type: "object"
@@ -1109,19 +1140,22 @@ components:
           type: "array"
           items:
             type: "string"
-        yearFrom:
+        year_from:
           type: "integer"
           format: "int64"
-        yearTo:
+        year_to:
           type: "integer"
           format: "int64"
-        durationFrom:
-          type: "string"
-          format: "date-time"
-        durationTo:
-          type: "string"
-          format: "date-time"
-        ratingFrom:
+        duration_from:
           type: "integer"
-        ratingTo:
+        duration_to:
           type: "integer"
+        rating_from:
+          type: "integer"
+        rating_to:
+          type: "integer"
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
